# autocut-studio

./: .gitignore  CHANGES.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  clean_start_autocut_studio.command  setup.cfg  setup.py  start_autocut_studio.command
.github/workflows/: ci.yml
autocut/: __init__.py  app_backend.py  app_progress.py  app_project.py  cut.py  main.py  package_transcribe.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LEGAL.md
macos/AutoCutStudio/: Package.swift
macos/AutoCutStudio/Sources/AutoCutStudio/App/: AutoCutStudioApp.swift
macos/AutoCutStudio/Sources/AutoCutStudio/Models/: AutoCutProject.swift
macos/AutoCutStudio/Sources/AutoCutStudio/Services/: AudioAnalyzer.swift  AudioPreviewPlayer.swift  PythonBackend.swift
macos/AutoCutStudio/Sources/AutoCutStudio/Stores/: ProjectStore.swift
macos/AutoCutStudio/Sources/AutoCutStudio/Support/: EditorKeyboardShortcuts.swift  FilePanels.swift  Formatters.swift  PlaybackRateOptions.swift
macos/AutoCutStudio/Sources/AutoCutStudio/Views/: ContentView.swift  SubtitleListView.swift  TimelineView.swift
macos/AutoCutStudio/Tests/AutoCutStudioTests/: AutoCutStudioTests.swift
script/: build_and_run.sh  start_app.sh
test/: test_app_project.py
