[metadata]
name = autocut-studio
version = attr: autocut.__version__
license = Apache-2.0
description = Local podcast and audio editor powered by AutoCut and Whisper
long_description = file: README.md
classifiers =
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio :: Editors

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9

[tool:pytest]
testpaths = test
